--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ html,body{
   position:absolute;
   top:12%;
   left:50%;
-  transform:translateX(-50%);
+  transform:translateX(-30%);
   text-align:center;
 }
 
@@ -66,6 +66,7 @@ html,body{
 .kepada{
   font-size:16px;
   font-weight:700;
+  color:#f1dbdb;
 }
 .tamu{
   display:inline-block;
