--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ html,body{
 .cover-text{
   position:absolute;
   top:12%;
-  left:50%;
+  left:45%;
   transform:translateX(-30%);
   text-align:center;
 }
@@ -275,6 +275,9 @@ html,body{
     <section class="section-box">
       <h3>Jadwal Acara</h3>
       <p><b>Pemberkatan</b><br>Jumat, 16 Januari 2026<br>GMI Tobasari, Sidamanik</p>
+      <a href="#" class="map-link">📍 Lihat Lokasi</a>
+      <br></br>
+      <p><b>Resepsi</b><br>GMI Tobasari, Sidamanik</p>
       <a href="#" class="map-link">📍 Lihat Lokasi</a>
     </section>
 
