--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@ html,body{
 
     <section class="section-box">
       <h3>Jadwal Acara</h3>
-      <p><b>Pemberkatan</b><br>Jumat, 16 Januari 2026<br>GMI Tobasari, Sidamanik</p>
-      <a href="#" class="map-link">📍 Lihat Lokasi</a>
+      <p><b>Pemberkatan</b><br>Jumat, 16 Januari 2026<br>Gereja Methodist Indonesia (GMI) Tobasari, Sidamanik</p>
+      <a href="https://www.google.com/maps/place/RVM4%2B9X4+GMI+Toba+Sari,+Sidamanik,+Unnamed+Road,+Simantin,+Kec.+Pematang+Sidamanik,+Kabupaten+Simalungun,+Sumatera+Utara+21186/data=!4m2!3m1!1s0x30319714643ebdc1:0x94d86ad74f6ed5e1!17m2!4m1!1e3!18m1!1e1?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESBzI1LjQ3LjgYACCenQoqogEsOTQyNjc3MjcsOTQyNzU0MDcsOTQyOTIxOTUsOTQyODQ0OTAsOTQyMjMyOTksOTQyMTY0MTMsOTQyODA1NzYsOTQyMTI0OTYsOTQyMDczOTQsOTQyMDc1MDYsOTQyMDg1MDYsOTQyMTc1MjMsOTQyMTg2NTMsOTQyMjk4MzksOTQyNzUxNjgsOTQyNzk2MTksNDcwODQzOTMsOTQyMTMyMDBCAklE&skid=628f89bd-fd12-48fd-aa94-80c0ecfac3b1&g_st=aw" class="map-link">📍 Lihat Lokasi</a>
       <br></br>
-      <p><b>Resepsi</b><br>GMI Tobasari, Sidamanik</p>
-      <a href="#" class="map-link">📍 Lihat Lokasi</a>
+      <p><b>Resepsi</b><br>Balai Pertemuan Kecamatan Sidamanik</br><b></p>
+      <a href="https://www.google.com/maps/place/VW57%2B6MR+Kantor+Camat+Sidamanik,+Jalan+Besar,+Ambarisan,+Kec.+Sidamanik,+Kabupaten+Simalungun,+Sumatera+Utara+21171/@2.8584569,98.914093,3a,75y,174.43h,78.3t/data=!3m5!1e1!3m3!1stWtImybvrIfPlXoWK3CvGg!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3DtWtImybvrIfPlXoWK3CvGg%26w%3D900%26h%3D600%26ll%3D0.0,0.0%26yaw%3D174.0%26pitch%3D12.0%26thumbfov%3D98%26cb_client%3Dgmm.iv.android!4m2!3m1!1s0x303196d71e4775d5:0x4ed64e2dd0f8f4f9?utm_source=mstt_0&g_ep=CAESBzI1LjQxLjYYACCBgQEqmQEsOTQyNjc3MjcsOTQyOTIxOTUsOTQyODQ0OTAsOTQyMjMyOTksOTQyMTY0MTMsOTQyODA1NzYsOTQyMTI0OTYsOTQyMDczOTQsOTQyMDc1MDYsOTQyMDg1MDYsOTQyMTc1MjMsOTQyMTg2NTMsOTQyMjk4MzksOTQyNzUxNjgsOTQyNzk2MTksNDcwODQzOTMsOTQyMTMyMDBCAklE&skid=5ee3e4fa-f122-4814-accd-1b91abdd89db" class="map-link">📍 Lihat Lokasi</a>
     </section>
 
     <section class="section-box">
